--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,44 @@
-h1{color: rgb(252, 95, 17);}
+body{font-family: arial, sans-serif;}
+
+.appWrapper{max-width: 600px;
+margin: 30px auto;}
+
+.weatherApp{
+padding:20px;
+border:1px solid #dadde1;
+border-radius: 5px;}
+
+.overview{margin-bottom: 25px;}
+
+#image{margin-right: 6px;
+height:64px;
+position:relative;
+top:-20px;
+left:8px;}
+
+#temperature{line-height: 1;
+    font-size: 64px;
+font-weight: 400;
+color: black;}
+
+#units{font-size: 16px;
+position: relative;
+top:-32px;}
+
+h1 {
+    color: rgb(252, 95, 17);
+    font-size: 24px;
+    font-weight: 100;
+    line-height: 28px;
+    margin-bottom: 0;
+}
+
+ul{padding:0;
+margin:0;}
+
+li{list-style: none;
+margin: 0%;
+padding: 0;
+font-size: 16px;
+font-weight: 100;
+line-height: 19px;}
