--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,8 @@ color: black;}
 
 #units{font-size: 16px;
 position: relative;
-top:-32px;}
+top:-32px;
+}
 
 h1 {
     color: rgb(252, 95, 17);
@@ -44,3 +45,9 @@ font-weight: 100;
 line-height: 19px;}
 
 li::first-letter{text-transform: capitalize;}
+
+#celsius{cursor:default;
+color: black;
+text-decoration: none;}
+
+#farenheit{text-decoration: none;}
