--- a/src/styles.css
+++ b/src/styles.css
@@ -64,6 +64,8 @@ color:#0d6efd;
 
 #tempMini{opacity:0.6;}
 
+#btn:hover{background-color: aliceblue;}
+
 #btn{border-radius: 5px;
     border: 2px solid #0d6efd;
     background-color: #0dcaf0;;
